--- a/dwca_config/field_mapping/dwca_terms_event.yaml
+++ b/dwca_config/field_mapping/dwca_terms_event.yaml
@@ -208,25 +208,27 @@ dwcaEventContent:
             sampleSizeUnit:
                 sourceKey: 
             samplingEffort:
-                dynamic: 
-                    -   dynamicKey: SampledVolume(L)
-                        sourceKey: sampled_volume_l
-                    -   dynamicKey: SamplerArea(cm2)
-                        sourceKey: sampler_area_cm2
-                    -   dynamicKey: WireAngle(deg)
-                        sourceKey: wire_angle_deg
-                    -   dynamicKey: FlowmeterLength(m)
-                        sourceKey: flowmeter_length_m
-                    -   dynamicKey: MeshSize(um)
-                        sourceKey: mesh_size_um
-                    -   dynamicKey: UpperMeshSize(um)
-                        sourceKey: upper_mesh_size_um
-                    -   dynamicKey: LowerMeshSize(um)
-                        sourceKey: lower_mesh_size_um
-                    -   dynamicKey: FactorsInfluencingCode
-                        sourceKey: factors_influencing_code
-                    -   dynamicKey: SampleSplittingCode
-                        sourceKey: sample_splitting_code
+                sourceKey: 
+                ### Moved to eMoF:
+                # dynamic: 
+                #     -   dynamicKey: SampledVolume(L)
+                #         sourceKey: sampled_volume_l
+                #     -   dynamicKey: SamplerArea(cm2)
+                #         sourceKey: sampler_area_cm2
+                #     -   dynamicKey: WireAngle(deg)
+                #         sourceKey: wire_angle_deg
+                #     -   dynamicKey: FlowmeterLength(m)
+                #         sourceKey: flowmeter_length_m
+                #     -   dynamicKey: MeshSize(um)
+                #         sourceKey: mesh_size_um
+                #     -   dynamicKey: UpperMeshSize(um)
+                #         sourceKey: upper_mesh_size_um
+                #     -   dynamicKey: LowerMeshSize(um)
+                #         sourceKey: lower_mesh_size_um
+                #     -   dynamicKey: FactorsInfluencingCode
+                #         sourceKey: factors_influencing_code
+                #     -   dynamicKey: SampleSplittingCode
+                #         sourceKey: sample_splitting_code
             eventDate:
                 sourceKeyList: 
                     - sample_date
