--- a/dwca_config/field_mapping/dwca_terms_event.yaml
+++ b/dwca_config/field_mapping/dwca_terms_event.yaml
@@ -130,7 +130,7 @@ dwcaEventContent:
             coordinatePrecision:
                 sourceKey: 
             license:
-                sourceKey: 
+                text: CC0
             rightsHolder:
                 text: Swedish Agency for Marine and Water Management
             accessRights:
@@ -302,7 +302,7 @@ dwcaEventContent:
             coordinatePrecision:
                 sourceKey: 
             license:
-                sourceKey: 
+                text: CC0 
             rightsHolder:
                 text: Swedish Agency for Marine and Water Management
             accessRights:
