Filters and translate for seal.

--- a/dwca_config/dwca_greyseal_nat.yaml
+++ b/dwca_config/dwca_greyseal_nat.yaml
@@ -61,4 +61,4 @@ filters:
         data_in/resources
     files:
         - filters.txt
-        # - filters_greyseal.txt
+        - filters_seal.txt
