--- a/dwca_config/dwca_harbourseal_nat.yaml
+++ b/dwca_config/dwca_harbourseal_nat.yaml
@@ -61,4 +61,4 @@ filters:
         data_in/resources
     files:
         - filters.txt
-        # - filters_harbourseal.txt
+        - filters_seal.txt
