--- a/dwca_config/dwca_ringedseal_nat.yaml
+++ b/dwca_config/dwca_ringedseal_nat.yaml
@@ -61,4 +61,4 @@ filters:
         data_in/resources
     files:
         - filters.txt
-        # - filters_ringedseal.txt
+        - filters_seal.txt
