EML: HierachyLevel: dataset.

--- a/dwca_config/eml_metadata/eml_auto.yaml
+++ b/dwca_config/eml_metadata/eml_auto.yaml
@@ -38,4 +38,4 @@ additionalMetadata:
     metadata: 
         gbif: 
             dateStamp: REPLACE-dateStamp
-            hierarchyLevel: REPLACE-hierarchyLevel
+            hierarchyLevel: dataset
