--- a/dwca_config/field_mapping/dwca_terms_event.yaml
+++ b/dwca_config/field_mapping/dwca_terms_event.yaml
@@ -146,7 +146,7 @@ dwcaEventContent:
             institutionCode:
                 text: Swedish Meteorological and Hydrological Institute
             datasetName:
-                text: SHARK - National zooplankton monitoring in Sweden since 1979
+                sourceKey: 
             ownerInstitutionCode:
                 text: Swedish Agency for Marine and Water Management
             dataGeneralizations:
