--- a/dwca_config/eml_metadata/eml_zoobenthos_reg_recip_proj.yaml
+++ b/dwca_config/eml_metadata/eml_zoobenthos_reg_recip_proj.yaml
@@ -13,7 +13,7 @@ additionalMetadata:
                 Regional monitoring, recipient control and monitoring projects of zoobenthos in Sweden since 1972.
 
 dataset: 
-    title: SHARK - Regional monitoring, recipient control and monitoring projects of zoobenthos in Sweden since 1972
+    title: SHARK - Regional monitoring and recipient control and monitoring projects of zoobenthos in Sweden since 1972
 
     abstract: 
         para: 
