--- a/dwca_config/eml_metadata/eml_phytoplankton_reg_recip_proj.yaml
+++ b/dwca_config/eml_metadata/eml_phytoplankton_reg_recip_proj.yaml
@@ -13,7 +13,7 @@ additionalMetadata:
                 Regional monitoring and monitoring projects of phytoplankton in Sweden since 1985.
 
 dataset: 
-    title: SHARK - Regional monitoring and recipient control and monitoring projects of phytoplankton in Sweden since 1985
+    title: SHARK - Regional monitoring, recipient control and monitoring projects of phytoplankton in Sweden since 1985
 
     abstract: 
         para: 
