--- a/dwca_config/eml_metadata/eml_zooplankton_nat.yaml
+++ b/dwca_config/eml_metadata/eml_zooplankton_nat.yaml
@@ -14,27 +14,20 @@ additionalMetadata:
                 National zooplankton monitoring in Sweden since 1979.
 
 dataset: 
-    title: SHARK - National zooplankton monitoring in Sweden since 1979
+    title: SHARK - National marine environmental monitoring of zooplankton in Sweden since 1979
 
     abstract: 
         para: 
-            -   Zooplankton have been monitored in Sweden since 1979. 
             -   The national monitoring program was initiated by the Swedish Environmental Protection Agency and is now financed by the Swedish Agency for Marine and Water Management. 
                 Monitoring is performed by Stockholm University, Umeå University, Swedish Meteorological and Hydrological Institute and Gothenburg University. 
-            -   'Data are stored in the Swedish Ocean Archive database (SHARK), by the Swedish Meteorological and Hydrological Institute. Data are collected and analyzed according to the 
-                HELCOM COMBINE Manual - Part C Annex C7 Mesozooplankton (https://helcom.fi/media/publications/Guidelines-for-monitoring-of-mesozooplankton.pdf) or similar methods. '
-            -   '"Mesozooplankton constitute an important part of zooplankton in the pelagic food webs, since these are the organisms representing the link between primary producers (phytoplankton) 
-                and higher trophic levels (zooplanktivorous fish and invertebrates).[...] The sampling of mesozooplankton serves [...] to describe the species composition and the spatial distribution of 
-                mesozooplankton abundance and biomass" (HELCOM COMBINE Manual https://helcom.fi/media/publications/Guidelines-for-monitoring-of-mesozooplankton.pdf). '
-            -   'Information about the program and the methods are also available in Swedish at 
-                https://www.havochvatten.se/vagledning-foreskrifter-och-lagar/vagledningar/ovriga-vagledningar/undersokningstyper-for-miljoovervakning/undersokningstyper/djurplankton-trend--och-omradesovervakning.html'
+            -   'Data are stored in the Swedish Ocean Archive (SHARK), by the Swedish Meteorological and Hydrological Institute (SMHI). Data should be sampled and analyzed according to the HELCOM COMBINE Manual - Part C Annex C7 Mesozooplankton (https://helcom.fi/media/publications/Guidelines-for-monitoring-of-mesozooplankton.pdf). However, deviations from the manual might occur.'
+            -   'Information about the program and the methods are available in Swedish at the website of Swedish Agency for Marine and Water Management, https://www.havochvatten.se/vagledning-foreskrifter-och-lagar/vagledningar/ovriga-vagledningar/undersokningstyper-for-miljoovervakning/undersokningstyper/djurplankton-trend--och-omradesovervakning.html'
 
     methods: 
         methodStep: 
             description: 
                 para:
-                    -   'Data are collected and analyzed according to the HELCOM COMBINE Manual - Part C Annex C7 Mesozooplankton 
-                        (https://helcom.fi/media/publications/Guidelines-for-monitoring-of-mesozooplankton.pdf) or similar methods. '
+                    -   'Data should be sampled and analyzed according to the HELCOM COMBINE Manual - Part C Annex C7 Mesozooplankton (https://helcom.fi/media/publications/Guidelines-for-monitoring-of-mesozooplankton.pdf). However, deviations from the manual might occur.'
         sampling: 
             description:
                 Samples are taken with vertical hauls using a WP-2 net. The samples are preserved and subsequently analyzed using microscopy. 
